# PencilTorch

./: .gitignore  13-07-2023.cpp  AntiSlipe.cpp  AntiSlipe2_with_F15_key.cpp  CImg_test-scrsaver1.cpp  ParametricWriteReadSQLite.cpp  Sqlite_and_class.cpp  TestSocketClient  TestSocketServer  WEBReader.cpp  WEBReader2.cpp  WebInetTest2.cpp  WinInetTest.cpp  WriteReadStringStreamExample.cpp  christmas_tree.cpp  param_req_sql_and serialize.cpp  parametric_request_sql.cpp  parse_string.txt  parsing_arshin.txt  serialise_example.cpp  sstream.cpp  test_serial_class.cpp
Arshin/: Arshin.sln
Arshin/Arshin/: Arshin.vcxproj  MyForm.cpp  MyForm.h
Arshin/Arshin/Debug/: Arshin.exe.recipe  Arshin.vcxproj.FileListAbsolute.txt  Arshin.vcxproj.GenerateResource.cache
Arshin/Arshin/Debug/Arshin.tlog/: Arshin.lastbuildstate  Arshin.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+3 more)
Arshin/Debug/: Arshin.exe.metagen
Arshin_SE/: MyForm.cpp  MyForm.h  PrintForm.cpp  PrintForm.h  Response.cpp  Response.h  readme.txt
MakeMD5-hash_word/: MD5.cpp  MD5.h  main.cpp
PhoneDB/: MyForm.cpp  MyForm.h  readme.md
ProjectCLR/: MyForm.h  readme.md
Quest_CLRProject/: Quest_CLRProject.sln
Quest_CLRProject/Quest_CLRProject/: LogFile.h  MasterForm.cpp  MasterForm.h  Quest_CLRProject.vcxproj  tests.db3
RegexEmojiParser/: CMakeLists.txt  RegexEmojiParser.cpp  main.cpp  utf-emodzi.txt  utf-kody-emoji.html
sandbox/: memory_leak.txt  sortShell.cpp
test1/: CMakeLists.txt  main.cpp  readme.md  sourse.txt  stop_words.txt
test1/newfolder/: output.txt  stop_words.txt
